manifests/bookinfo/productpage-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: productpage-nodeport
  namespace: default
  labels:
    app: productpage
    service: productpage
spec:
  type: NodePort
  selector:
    app: productpage
  ports:
    - name: http
      port: 80
      targetPort: 9080
